# promethean-application

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_epic_01_foundation.py  0002_epic_02_schema.py  0002_rls_and_additions.py
backend/app/: config.py  database.py  dependencies.py  email.py  github.py  main.py  redis_client.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/middleware/: __init__.py  auth.py  sentry.py
backend/app/modules/admin/: models.py  router.py  schemas.py  service.py
backend/app/modules/batches/: models.py  router.py  schemas.py  service.py
backend/app/modules/booking/: __init__.py
backend/app/modules/community/: __init__.py
backend/app/modules/curriculum/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/enrollment/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/identity/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/mentors/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/sessions/: __init__.py
backend/app/modules/standups/: __init__.py
backend/app/modules/students/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/scripts/: init_db.sql  seed_demo_data.py
backend/tests/: conftest.py  test_admin_router.py  test_auth_middleware.py  test_enrollment_service.py  test_health.py  test_identity_router.py  test_identity_service.py  test_sentry.py  test_student_service.py
docs/: clerk-setup.md  frontend-backend-integration-sheet.md
front-end/: .env.local.example  .gitignore  README.md  ensure-node.mjs  next.config.ts  package-lock.json  package.json
front-end/src/: clerk.d.ts  middleware.ts
front-end/src/app/: globals.css  (+3 more)
realtime/: package-lock.json  package.json
realtime/src/: index.js
(+117 files in other folders)
