[project]
name = "promethean-backend"
version = "0.1.0"
description = "Promethean application FastAPI backend"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.50.0",
    "pydantic==2.*",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.31.0",
    "alembic",
    "python-jose[cryptography]",
    "redis[hiredis]",
    "httpx",
    "resend",
    "sentry-sdk[fastapi]",
    "structlog",
    "python-multipart",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
